# XYCAR2025

cv_detect/: package.xml
cv_detect/launch/: traffic_detection.launch
cv_detect/src/: shared_function.py  traffic_detection.py
heading/: CMakeLists.txt
heading/launch/: imu_heading.launch
heading/src/: imu_heading_calc.py
lane_detection/launch/: lane_detection.launch
lane_detection/src/: lane_detection.py  shared_function.py  slidewindow_both_lane.py
obstacle_detector/: CMakeLists.txt  package.xml
obstacle_detector/include/obstacle_detector/: circle.h  figure_fitting.h  math_utilities.h  obstacle_extractor_rubbercone.h  point.h  point_set.h  segment.h
obstacle_detector/launch/: rubbercone_obstacle.launch  static_obstacle.launch
obstacle_detector/msg/: CarObstacles.msg  Obstacles.msg  Waypoint.msg
obstacle_detector/src/: lidar_to_obstacles.py  obstacle_extractor_rubbercone.cpp  obstacle_extractor_rubbercone_node.cpp  rubbercone_detector.py  rubbercone_obstacle_avoidance.py  rubbercone_waypoint_generator.py  static_obstacle_avoidance.py
xycar_planner/launch/: xycar_planner_static_test.launch
xycar_planner/src/: xycar_planner_static_test.py  xycar_planner_static_test_rubber.py
